feat: update env example

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,10 @@ POSTGRES_URL=****
 # Instructions to create a Redis store here:
 # https://vercel.com/docs/redis
 REDIS_URL=****
+
+ARTHUR_API_KEY=changeme_genai_engine_admin_key
+ARTHUR_TASK_ID=****
+ARTHUR_API_BASE=http://localhost:3030
+NEXT_PUBLIC_ARTHUR_API_KEY=changeme_genai_engine_admin_key
+NEXT_PUBLIC_ARTHUR_TASK_ID=****
+NEXT_PUBLIC_ARTHUR_API_BASE=http://localhost:3030
