feat: update .env.example

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ POSTGRES_URL=****
 # Instructions to create a Redis store here:
 # https://vercel.com/docs/redis
 REDIS_URL=****
+
+ARTHUR_API_KEY=
+ARTHUR_TASK_ID=
+ARTHUR_API_BASE=http://localhost:3030
