feat: implement Jest testing framework and update environment variables
- Added Jest configuration and setup files for unit and integration testing.
- Updated environment variable names in `.env.example` and related documentation.
- Refactored middleware to use `ARTHUR_MODEL_ID` instead of `ARTHUR_TASK_ID`.
- Created comprehensive test suite for chat functionality and middleware.
- Introduced CI/CD pipeline for automated testing and deployment.

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,6 @@ POSTGRES_URL=****
 REDIS_URL=****
 
 ARTHUR_API_KEY=
-ARTHUR_TASK_ID=
+ARTHUR_MODEL_ID=
 ARTHUR_API_BASE=http://localhost:3030
 ARTHUR_USE_GUARDRAILS=true
