--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "eslint-plugin-tailwindcss": "^3.17.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "node-fetch": "^3.3.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.1",
