--- a/package.json
+++ b/package.json
@@ -104,13 +104,15 @@
     "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
     "@vitest/ui": "^3.2.4",
     "drizzle-kit": "^0.25.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.5",
+    "eslint": "^9.31.0",
+    "eslint-config-next": "15.4.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-tailwindcss": "^3.17.5",
+    "eslint-import-resolver-typescript": "^3.10.1",
+    "eslint-plugin-tailwindcss": "^3.18.2",
     "node-fetch": "^3.3.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
